prevented scrolling on small screens to the right

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ html {
   scrollbar-width: none;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 /* IE / old Edge */
 body {
   -ms-overflow-style: none;
@@ -134,7 +138,7 @@ a {
   cursor: pointer;
 }
 
-@media (max-width: 900px) {
+/*@media (max-width: 900px) {
   .nav-links {
     position: absolute;
     top: 80px;
@@ -149,6 +153,30 @@ a {
 
   .nav-links.active {
     transform: translateX(0); 
+  }*/
+
+  @media (max-width: 900px) {
+  .nav-links {
+    position: fixed;
+    top: 80px;
+    right: 0;
+
+    height: calc(100vh - 80px);
+
+    background: var(--bg);
+    flex-direction: column;
+
+    width: 250px;
+    padding: 20px;
+
+    transform: translateX(100%);
+    transition: transform 0.3s ease;
+
+    box-shadow: -10px 0 30px rgba(0,0,0,0.1);
+  }
+
+  .nav-links.active {
+    transform: translateX(0);
   }
 
   .hamburger {
@@ -1198,7 +1226,7 @@ a:hover {
 .hobby-popup {
   position: absolute;
   top: 90%; /* just below the link */
-  left: 65%;
+  left: 50%;
   transform: translateX(-50%);
 
   width: 260px;
